# forecast

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  spec.md
.devcontainer/: AGENTS.md
.devcontainer/codespace/: devcontainer.json  post-create.sh  post-start.sh
.devcontainer/codex/: post-create.sh  post-start.sh
.devcontainer/local/: devcontainer.json  post-create.sh  post-start.sh
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: README.md
docs/conventions/: README.md
docs/project/: README.md
docs/research/: README.md
docs/user/: README.md
forecasts/: ledger.csv
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/tests/: example.test.ts
jfm/: __init__.py  cli.py  pyproject.toml
jfm/io/: __init__.py  loader.py  schema.py
jfm/model/: __init__.py  edges.py  engine.py  render.py  sensitivity.py  types.py
jfm/src/jfm/: __init__.py
jfm/tests/: test_version.py
jfm/util/: __init__.py  log.py  stats.py
model/: current.yaml
model/schemas/: evidence.schema.yaml  graph.schema.json
refs/: README.md
scripts/: format_all.sh
tests/: test_edges.py  test_engine_integration.py  test_loader.py
