[project]
name = "jfm"
version = "0.1.0"
description = "Joern's Forecasting Model"
authors = [{name = "Joern Stoehler"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.dependencies]
pydantic = ">=2,<3"
jsonschema = ">=4,<5"
pyyaml = ">=6,<7"
numpy = ">=1.26,<3"
typer = ">=0.12,<0.13"
graphviz = ">=0.20,<0.21"

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
