[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "jfm"
version = "0.0.1"
description = "Joern's Forecasting Model – Python backend"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Joern", email = "" }
]
readme = "../README.md"
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.27"
]
ppl = [
  "pymc>=5.13",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
  "pyright>=1.1.373",
]

[tool.hatch.build.targets.wheel]
packages = ["src/jfm"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

